# webapp

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  deliver.py  old-tox.ini  pyproject.toml  runtests.py  setup.cfg  tox.ini
.github/workflows/: python-package.yml
features/: anonymous.feature  campaign.feature  follow.feature  register.feature
features/steps/: anonymous.py  campaign.py  follow.py  register.py
tests/: __init__.py  healthtest_move.py  manage.py  remove_views.py  settings.py  testsettings.py  urls.py
webapp/: ActivityView.py  __init__.py  activity.py  admin.py  api_urls.py  api_views.py  apps.py  encoders.py  exceptions.py  fields.py  forms.py  managers.py  mixins.py  models.py  registry.py  renderers.py  schema.py  serializers.py  signals.py  signature.py  tasks.py  tests.py  typing.py  urls.py  urls_activity.py  urls_api.py  validators.py  views.py
webapp/activities/: __init__.py  inbound.py
webapp/activitypub/: activity.py  admin.py  apps.py  registry.py  renderers.py  signals.py  signature.py  tasks.py
webapp/activitypub/activities/: __init__.py  inbound.py
webapp/activitypub/migrations/: 0001_initial.py
webapp/activitypub/models/: __init__.py  action.py  actor.py  like.py  note.py
webapp/activitypub/serializers/: __init__.py  action.py  actor.py  note.py
webapp/activitypub/tests/: __init__.py  test_action.py  test_activityobject.py  test_actor.py  test_fetch.py  test_following.py  test_outbox.py  test_signature.py  test_web.py  test_webfinger.py
webapp/activitypub/urls/: __init__.py  web.py
webapp/activitypub/views/: __init__.py  activity.py  actor.py  followers.py  following.py  inbox.py  liked.py  outbox.py  webfinger.py
webapp/fixtures/: pages.yaml  sites.site.yaml  socialaccount.socialapp.yaml
webapp/management/commands/: contacts.py  follow.py  serialize.py
webapp/masto/: no_tests.py  provider.py  tests.py  urls.py  views.py
webapp/migrations/: 0001_initial.py  0001_webapp-new-base.py  0002_auto_20210109_1528.py  0003_alter_user_id.py  0004_profile.py  0005_remove_user_dob_profile_gravatar_profile_img_and_more.py  0006_profile_mastodon_alter_profile_img.py  0007_profile_slug.py  0008_profile_bio_profile_icon.py  0009_activity_profile_public_key_pem_alter_profile_img.py  0010_alter_activity_actor_alter_activity_verb.py  0011_attachment_profile_private_key_pem_object.py  0013_alter_activity_object.py  0014_profile_ap_id.py  0015_alter_profile_user.py  0016_delete_activity_remove_object_attachment_and_more.py  0020_alter_note_options_note_sensitive.py  0023_alter_profile_key_id.py  0024_remove_profile_key_id.py  0026_actor.py  0028_actor_preferredusername.py  0029_actor_follows.py  0030_remove_action_verb_action_activity_type.py  0031_alter_actor_type.py  0032_remove_actor_preferredusername_remove_actor_slug.py  0033_alter_actor_id.py  0035_remove_actor_follows_actor_following.py  0042_actor_flw.py  0044_remove_actor_flw_follow_actor_follows_delete_fllwng.py  0045_remove_profile_ap_id_remove_profile_follows.py  0046_alter_actor_profile.py  0047_alter_profile_user.py  0048_remove_user_consent_remove_user_public.py  0049_profile_publish_to_linkedin.py
webapp/migrations/oldmigrations/: 0002_auto_20210109_1528.py  0004_profile.py  0005_remove_user_dob_profile_gravatar_profile_img_and_more.py  0007_profile_slug.py  0009_activity_profile_public_key_pem_alter_profile_img.py  0012_alter_activity_actor.py  0015_alter_profile_user.py  0016_delete_activity_remove_object_attachment_and_more.py  0017_action.py  0018_note.py  0019_alter_action_options_and_more.py  0021_alter_profile_ap_id_alter_profile_private_key_pem.py  0022_profile_key_id.py  0025_alter_profile_ap_id.py  0027_alter_actor_profile.py  0030_remove_action_verb_action_activity_type.py  0034_alter_actor_id.py  0036_note_attributedto_note_contentmap_note_remoteid.py  0037_like.py  0038_alter_like_id.py  0039_rename_following_actor_follows.py  0040_alter_actor_follows.py  0041_alter_actor_id.py  0042_fllwng_actor_flw.py  0043_remove_actor_follows.py  0050_alter_profile_img.py  0051_alter_actor_unique_together_remove_actor_follows_and_more.py
webapp/models/: __init__.py  activitypub.py  actor.py  like.py  profile.py  user.py
webapp/models/activitypub/: __init__.py  action.py  actor.py  like.py  note.py
webapp/oidc/hs/: provider.py  urls.py  views.py
webapp/removethis/: apps.py
webapp/serializers/: __init__.py  action.py  actor.py  unused.bla
webapp/signals/: __init__.py  linkedin.py
webapp/static/: base.css  base.js  cookieconsent-ini.js
webapp/static/account/: login.js
webapp/tasks/: __init__.py  activitypub.py
webapp/templates/: 403.html  404.html  500.html  addon.json  base.html  calendar.html  contact.html  github.html  home.html  humans.txt  search_results.html  status.html
webapp/templates/account/: account.html  account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  profile_detail.html  signup.html  signup_closed.html
webapp/templates/activitypub/: action.html  followers.html  following.html  like_delete.html
webapp/templates/hubspot/: index.html
webapp/templates/oauth2_provider/: application_list.html
webapp/templates/oldpagest/: default.html
webapp/templatetags/: groups.py  release.py
webapp/tests/: __init__.py  activity.py  activitypub.py  activitystreams.py  actor.py  following.py  inbox.py  messages.py  outbox.py  rename_messages.py  signature.py  test_action.py  test_activityobject.py  test_actor.py  test_fetch.py  test_following.py  test_inbox.py  test_pages.py  test_signature.py  test_web.py  test_webfinger.py  webfinger.py
webapp/urls/: __init__.py  activitypub.py  api.py  web.py
webapp/views/: __init__.py  activity.py  activitypub.py  actor.py  api.py  followers.py  following.py  inbox.py  likes.py  outbox.py  profile.py  signature.py  web.py  webfinger.py
wheel/: pramari_webapp-1.1.23-py3-none-any.whl
(+43 files in other folders)
