[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
reproducible = false

[tool.hatch.build.targets.wheel]
packages = ["webapp/"]


[project]
name = "pramari-webapp"
version = "1.1.23"
authors = [
  { name="Andreas Neumeier", email="andreas@neumeier.org" },
]
description = "Authentication and Userprofiles in  pramari.de"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=4.2",
  "django-allauth",
  "django-activity-stream",
  "django-oauth-toolkit",
  "djangorestframework",
  "django-guardian",
  "django-anymail[mailgun]",
  "Pillow",
  "pyyaml",
  "celery",
  "http-message-signatures",
  #"requests-http-signature",
  "PyJWT",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.pramari.de"
"Bug Tracker" = "https://github.com/pramari/npc/issues"

# [tool.pytest.ini_options]
# addopts = "" #--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    env_list =
        py312
        py311
        py310
        py39
        type

    [testenv]
    setenv =
        PYTHONPATH = "."
        DJANGO_SETTINGS_MODULE = "tests.settings"
    
    deps =
        behave
        coverage

    commands =
        coverage run --source webapp tests/manage.py
        coverage xml
        behave
        echo "success"
     
    # commands = python tests/manage.py test --settings=tests.settings

    [testenv:lint]
    deps = flake8
    commands = flake8 webapp
"""
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

python_files = ["test_*.py"]

[tool.coverage.run]
source = ["webapp"]
