[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
reproducible = false

[tool.hatch.build.targets.wheel]
packages = ["webapp/"]


[project]
name = "pramari-webapp"
version = "1.1.23"
authors = [
  { name="Andreas Neumeier", email="andreas@neumeier.org" },
]
description = "Authentication, Userprofiles, Federation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=4.2",
  "django-allauth",
  "django-activity-stream",
  "django-oauth-toolkit",
  "djangorestframework",
  "django-guardian",
  "django-anymail[mailgun]",
  "Pillow",
  "pyyaml",
  "celery",
  "pyld",
  # "http-message-signatures",
  # "requests-http-signature",
  "PyJWT",
  "types-requests",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.pramari.de"
"Bug Tracker" = "https://github.com/pramari/npc/issues"

# [tool.pytest.ini_options]
# addopts = "" #--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    env_list =
        py312
        type

    [testenv]
    setenv =
        PYTHONPATH = ".";{toxinidir}:{toxinidir}
        DJANGO_SETTINGS_MODULE=tests.settings
    
    deps =
        pytest
        # behave
        coverage

    commands =
        coverage run --source webapp tests/manage.py test --settings=tests.settings
        coverage xml
        # behave
        # echo "success"
     
    # commands = python tests/manage.py test --settings=tests.settings

    [testenv:lint]
    deps = flake8
    commands = flake8 webapp

    [testenv:pep8]
    show-source = True
    commands = {envbindir}/flake8 --max-line-length=80 --exclude=.tox,docs,sample_app/tests/settings.py,sample_app/__init__.py,sample_app/migrations sample_app
    # Flake8 only needed when linting.
    # Do not care about other dependencies, it's just for linting.
    deps = flake8
    changedir = {toxinidir}
"""
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

python_files = ["test_*.py"]

[tool.coverage.run]
source = ["webapp"]
